# ManPageEditor

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  ManPageEdit.mpz  README  autogen.sh  config.h.in  configure  configure.ac  makepkg  remakesourcelist
ManPageEditor/: flagsandlibs  sources
ManPageEditor/app/: Makefile.am  Makefile.in
ManPageEditor/debug/: Makefile.am
ManPageEditor/resources/applications/: ManPageEditor.desktop
ManPageEditor/resources/documenticons/: maneditdoc-mime.xml
ManPageEditor/resources/examples/: examlemanpage.mpz  examplemanpage.mpz  template-1.mpz
ManPageEditor/resources/glade/: ManPageEditor.glade
ManPageEditor/resources/help/: help.html
ManPageEditor/resources/man/: manpageeditor.1
ManPageEditor/resources/pixmaps/: ManPageEditor.desktop
ManPageEditor/resources/scripts/: convertFile
ManPageEditor/src/: callbacks.cpp  callbacks.h  files.cpp  files.h  globals.cpp  globals.h  guis.cpp  guis.h  internet.cpp  internet.h  main.cpp  navcallbacks.cpp  navcallbacks.h  script.cpp  script.h  searchcallbacks.cpp  searchcallbacks.h  spellcheck.cpp  spellcheck.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
lfspkg/: ManPageEditor.LFSBuild
